Bug 188941 - default shortcuts are not working well with mc
Summary: default shortcuts are not working well with mc
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-04-06 07:52 UTC by oneforall
Modified: 2011-08-26 08:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description oneforall 2009-04-06 07:52:09 UTC
Version:           4.2.68-r945504 (using Devel)
Compiler:          gcc4.3.3 
OS:                Linux
Installed from:    Compiled sources

the alternative for prev and next should be removed since in kde3 konsole it wasn't there. Most likely because it was know to interfere with mcedit to move to the bottom of a page and back to the top. I've used it for years ctrl+pgup and down.
Comment 1 oneforall 2009-11-03 10:45:30 UTC
This still isn't fixed in kde 4.3.2 :(
ctrl+left/right arrow isn't used because it would interfere with bash .
mc(midnight comanader) is a long standing application that should be respected too
Its extremely frustrating to spend so much time to figure out how to fix it .
Comment 2 Jekyll Wu 2011-08-23 03:46:32 UTC
If I understand it correctly, this is what you are suggesting:

Do not add or choose Ctrl+PgUp/PgDn as the alternative shortcut for switching to prev/next tab, because that interferes with mc and possibly others.

Am I right?
Comment 3 Jekyll Wu 2011-08-26 08:26:56 UTC
Git commit 67e2181fe78cfe2328891f8f053473bf3f378f4c by Jekyll Wu.
Committed on 23/08/2011 at 15:11.
Pushed by jekyllwu into branch 'master'.

Do not set alternative shortcut for switching to prev/next tab.

It is generally a good idea to pass more keyboard actions into terminal
process, instead of intercepting them. Anyway, Uses can still define the
alternative shortcuts themselfes if they want.

BUG: 188941
FIXED-IN: 4.8

M  +0    -2    src/ViewManager.cpp

http://commits.kde.org/konsole/67e2181fe78cfe2328891f8f053473bf3f378f4c