Do not set alternative shortcut for switching to prev/next tab.

It is generally a good idea to pass more keyboard actions into terminal
process, instead of intercepting them. Anyway, Uses can still define the
alternative shortcuts themselfes if they want.

BUG: 188941
FIXED-IN: 4.8